    -Textareas are read in sequence from flyapplet scriptfile, 
    -using document.getElementById("flyapplet").ReadText() javascript interface
    example; 
    inputfield -5,5,4,1,helvetica,22,red,green,true,change this text
    textarea left upper corner at (-5:5)
    textarea right under corner at (-1:4)
    textsize 22
    is editable
    preprint text is "change this text"
    inputfield -5,5,4,1,helvetica,22,red,green
-corrected color mixup in grid
-corrected x/y-scale syntax bug
    xscale x1,x1_name,x2,x2_name,x3,x3_name.....,fontsize,fontname,fontcolor,tickmark_linewidth
        
22/3/2010                                                                                                                                  
-added scalelatex x,y,width,height,latexstring,[optional] bgcolor,fgcolor,bg_alpha,fg_alpha                                                
    scale the lateximage to width,height in coordinate system xrange/yrange                           
    Attention: this may lead to very poor readability [the fontsizes are limited to the latex defaults [max 12] 

-changed latex syntax : now the optional bgcolor and fgcolor may have alpha channel
    latex x,y,latexstring,[optional] bgcolor,fgcolor,bg_alpha,fg_alpha
    defaults are applet bgcolor and "draw color" [clickcolor]        

14/5/2010
-added \euro to atp library : 
    latex x,y,\frac{100 ^{3 \times \euro }}{4 \cdot \euro },[optional] bgcolor,fgcolor,bg_alpha,fg_alpha

18/5/2010
-added "inputs/inputfields" for the amount of inputfields required [if not set: default=20]
    inputs 24
    inputfields 4
20/8/2010
-added xlabel/ylabel
    xlabel "label_of_x-axis",fontsize [,fontname,color,alpha]
    xlabel x axis,14,times,red,160   
     
    ylabel label_of_y-axis,fontsize [,fontname,color,alpha]
    ylabel y axis,12    
    
    label of y_axis is always horizontal
21/8/2010
-changed xlabel position [closer to x-axis]

8/11/2010
- forgotten to implement userdraw  filledpoly / fpoly

