@@ -91,4 +91,7 @@ CHANGELOG
 8/11/2010
 - forgotten to implement userdraw  filledpoly / fpoly
 
-
+9/9/2011
+- added to interactive mode: mlines (multilines) ; used for drawing multiple segments in the applet
+ use ReadDrawing() via javascript or X.Gang's inputapplet mode to read data (x1,y1,x2,y2,x3,y3...xn,yn)
+     
